--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">WebStudio</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Normalaizer -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -19,6 +21,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <!-- Common styles -->
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -31,7 +35,7 @@
           </a>
           <ul class="nav__list list">
             <li class="nav__item">
-              <a class="nav__link current link" href="./index.html">Студия</a>
+              <a class="nav__link nav__link--current link" href="./index.html">Студия</a>
             </li>
             <li class="nav__item">
               <a class="nav__link link" href="./portfolio.html">Портфолио</a>
@@ -160,28 +164,28 @@
                 <div class="social">
                   <ul class="social__list list">
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Instagram">
+                    <a href="" class="social__link social__link--light link" aria-label="Instagram">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Twitter">
+                    <a href="" class="social__link social__link--light link" aria-label="Twitter">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Facebook">
+                    <a href="" class="social__link social__link--light link" aria-label="Facebook">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="LinkedIn">
+                    <a href="" class="social__link social__link--light link" aria-label="LinkedIn">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -205,28 +209,28 @@
                 <div class="social">
                   <ul class="social__list list">
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Instagram">
+                    <a href="" class="social__link social__link--light link" aria-label="Instagram">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Twitter">
+                    <a href="" class="social__link social__link--light link" aria-label="Twitter">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Facebook">
+                    <a href="" class="social__link social__link--light link" aria-label="Facebook">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="LinkedIn">
+                    <a href="" class="social__link social__link--light link" aria-label="LinkedIn">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -250,28 +254,28 @@
                 <div class="social">
                   <ul class="social__list list">
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Instagram">
+                    <a href="" class="social__link social__link--light link" aria-label="Instagram">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Twitter">
+                    <a href="" class="social__link social__link--light link" aria-label="Twitter">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Facebook">
+                    <a href="" class="social__link social__link--light link" aria-label="Facebook">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="LinkedIn">
+                    <a href="" class="social__link social__link--light link" aria-label="LinkedIn">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -295,28 +299,28 @@
                 <div class="social">
                   <ul class="social__list list">
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Instagram">
+                    <a href="" class="social__link social__link--light link" aria-label="Instagram">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Twitter">
+                    <a href="" class="social__link social__link--light link" aria-label="Twitter">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="Facebook">
+                    <a href="" class="social__link social__link--light link" aria-label="Facebook">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
-                    <a href="" class="social__link link" aria-label="LinkedIn">
+                    <a href="" class="social__link social__link--light link" aria-label="LinkedIn">
                       <svg class="social__icon" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -410,36 +414,38 @@
         </div>
         <div class="footer-box__social">
           <p class="footer__title">присоединяйтесь</p>
-          <ul class="social__list list">
+          <div class="social">
+            <ul class="social__list list">
             <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="Instagram">
+              <a href="" class="social__link social__link--dark link" aria-label="Instagram">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="Twitter">
+              <a href="" class="social__link social__link--dark link" aria-label="Twitter">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="Facebook">
+              <a href="" class="social__link social__link--dark link" aria-label="Facebook">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="LinkedIn">
+              <a href="" class="social__link social__link--dark link" aria-label="LinkedIn">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+          </div>
         </div>
         <!-- Розсилка -->
         <div class="footer-box__mail">
@@ -463,48 +469,48 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="close-btn" type="button" data-modal-close>
-          <svg class="close-btn-icon" width="18" height="18">
+          <svg class="close-btn__icon" width="18" height="18">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <form class="modal-form-register" name="modal-form" autocomplete="off">
-          <p class="modal-form-title">Оставьте свои данные, мы вам перезвоним</з>
-          <div class="form-container">
-            <div class="modal-form-container">
-              <label class="modal-form-group" required>
-                <span class="modal-form-label">Имя</span>
-                <input class="modal-form-field" type="text" name="name" />
-                <svg class="modal-form-icon" width="18" height="18">
+        <form class="modal-form" name="modal-form" autocomplete="off">
+          <p class="modal-form__title">Оставьте свои данные, мы вам перезвоним</з>
+          <div class="modal-form__box">
+            <div class="modal-form__container">
+              <label class="modal-form__group" required>
+                <span class="modal-form__label">Имя</span>
+                <input class="modal-form__input" type="text" name="name" />
+                <svg class="modal-form__icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-person"></use>
                 </svg>
               </label>
             </div>
 
-            <div class="modal-form-container">
-              <label class="modal-form-group" required>
-                <span class="modal-form-label">Телефон</span>
-                <input class="modal-form-field" type="tel" name="phone" />
-                <svg class="modal-form-icon" width="18" height="18">
+            <div class="modal-form__container">
+              <label class="modal-form__group" required>
+                <span class="modal-form__label">Телефон</span>
+                <input class="modal-form__input" type="tel" name="phone" />
+                <svg class="modal-form__icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </label>
             </div>
 
-            <div class="modal-form-container" required>
-              <label class="modal-form-group">
-                <span class="modal-form-label">Почта</span>
-                <input class="modal-form-field" type="email" name="email" />
-                <svg class="modal-form-icon" width="18" height="18">
+            <div class="modal-form__container" required>
+              <label class="modal-form__group">
+                <span class="modal-form__label">Почта</span>
+                <input class="modal-form__input" type="email" name="email" />
+                <svg class="modal-form__icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-mail"></use>
                 </svg>
               </label>
             </div>
 
-            <div class="modal-form-container">
-              <label class="modal-form-group">
-                <span class="modal-form-label">Комментарий</span>
+            <div class="modal-form__container">
+              <label class="modal-form__group">
+                <span class="modal-form__label">Комментарий</span>
                 <textarea
-                  class="modal-form-comment"
+                  class="modal-form__comment"
                   name="comment"
                   rows="5"
                   placeholder="Введите текст"
@@ -513,16 +519,16 @@
             </div>
           </div>
 
-          <label class="modal-form-checkbox">
-            <input class="form-checkbox visually-hidden" type="checkbox" name="user-agreement" />
+          <label class="checkbox">
+            <input class="checkbox__input visually-hidden" type="checkbox" name="user-agreement" />
 
-            <svg class="form-checkbox-icon" width="15" height="15">
+            <svg class="checkbox__icon" width="15" height="15">
               <use href="./images/icons.svg#icon-check"></use>
             </svg>
 
-            <span class="checkbox-text"
+            <span class="checkbox__text"
               >Соглашаюсь с рассылкой и принимаю
-              <a class="checkbox-link" href="" required>Условия договора</a></span
+              <a class="checkbox__link" href="" required>Условия договора</a></span
             >
           </label>
           <button class="btn" type="submit">Отправить</button>
