--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
               <a class="nav__link link" href="./index.html">Студия</a>
             </li>
             <li class="nav__item">
-              <a class="nav__link current link" href="./portfolio.html">Портфолио</a>
+              <a class="nav__link nav__link--current link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav__item">
               <a class="nav__link link" href="#contact">Контакты</a>
@@ -63,7 +63,7 @@
           <h1 class="visually-hidden">Portfolio</h1>
           <ul class="filter__list list">
             <li class="filter__item">
-              <button class="filter__btn current" type="button">Все</button>
+              <button class="filter__btn filter__btn--current" type="button">Все</button>
             </li>
             <li class="filter__item">
               <button class="filter__btn" type="button">Веб-сайты</button>
@@ -314,36 +314,38 @@
         </div>
         <div class="footer-box__social">
           <p class="footer__title">присоединяйтесь</p>
-          <ul class="social__list list">
-            <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="Instagram">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="Twitter">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="Facebook">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social__item">
-              <a href="" class="footer-social__link link" aria-label="LinkedIn">
-                <svg class="social__icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="social">
+            <ul class="social__list list">
+              <li class="social__item">
+                <a href="" class="social__link social__link--dark link" aria-label="Instagram">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="" class="social__link social__link--dark link" aria-label="Twitter">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="" class="social__link social__link--dark link" aria-label="Facebook">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="" class="social__link social__link--dark link" aria-label="LinkedIn">
+                  <svg class="social__icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <!-- Розсилка -->
         <div class="footer-box__mail">
