--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <!-- Common styles -->
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
 
   <body data-body>
